--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -6,6 +6,14 @@
   width: 100%;
   z-index: 5;
   padding: 30px 0;
+
+  transition: all 0.3s ease 0s;
+
+  &.fixed {
+    background-color: rgba(122, 102, 204, 0.9);
+    padding: 15px 0;
+  }
+
   @media (max-width: 768px) {
     padding: 15px 0;
   }
