--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -125,9 +125,6 @@
 
 // ===== ABOUT BLOCK =====
 .about {
-    // temp
-    padding-bottom: 100px;
-    // temp
   margin-top: 180px;
   @media (max-width: 1024px) {
     margin-top: 100px;
@@ -248,4 +245,67 @@
     }
   }
 
+}
+
+//===== QUOTE BLOCK =====
+.quote  {
+  padding-top: 230px;
+// temp
+  padding-bottom: 100px;
+// temp
+  &__container {
+    position: relative;
+    color: white;
+    width: 100%;
+    height: 100%;
+  }
+
+  &__inner {
+    width: 100%;
+    height: 100%;
+    border: 2px solid white;
+    border-radius: 30px 0 30px 0;
+  }
+
+  &__text {
+    width: 100%;
+    max-width: 520px;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 27px;
+    padding: 50px 0 25px 80px;
+  }
+
+  &__symbol {
+    position: absolute;
+    z-index: -1;
+    top: 60px;
+    left: 100px;
+  }
+
+  &__line {
+    background-color: #FFFFFF;
+    width: 100%;
+    max-width: 520px;
+    border: 2px solid #FFFFFF;
+    margin-left: 80px;
+    margin-bottom: 25px;
+  }
+
+  &__link {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 27px;
+    padding-left: 80px;
+    margin-bottom: 50px;
+    color: #7A66CC;
+  }
+
+  &__img {
+    position: absolute;
+    z-index: 2;
+    right: 80px;
+    top: -85px;
+    border-radius: 30px 0 30px 0;
+  }
 }
