--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -68,6 +68,34 @@
   }
 }
 
+.menu {
+  &__link {
+    position: relative;
+
+    &::before {
+      content: '';
+      position: absolute;
+      top: 100%;
+
+      display: block;
+      width: 100%;
+      height: 2px;
+
+
+      background-color: white;
+      border-radius: 3px;
+      transition: all 0.3s ease 0s;
+      transform: scaleX(0);
+    }
+
+    @media (hover: hover) {
+      &:hover::before {
+        transform: scaleX(1);
+      }
+    }
+  }
+}
+
 //Burger
 .icon-menu {
   display: none;
