--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -190,9 +190,6 @@
 //===== QUOTE BLOCK =====
 .quote  {
   padding-top: 230px;
-// temp
-  padding-bottom: 100px;
-// temp
   &__container {
     position: relative;
     color: white;
@@ -310,3 +307,84 @@
     }
   }
 }
+
+//=====TRACKS BLOCK=====
+.tracks {
+  padding-top: 180px;
+  //temp
+  padding-bottom: 200px;
+  //temp
+  &__container {
+    display: flex;
+    gap: 95px;
+  }
+
+  &__img {
+    border: 17px solid #7A66CC;
+    border-radius: 50%;
+  }
+
+  &__inner {
+    color: white;
+  }
+
+  &__heading {
+    margin-bottom: 60px;
+  }
+
+  &__video {
+    margin-bottom: 50px;
+  }
+
+  &__songs {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-bottom: 60px;
+  }
+
+  &__name {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 27px;
+  }
+
+  &__number {
+    margin-right: 20px;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 27px;
+    color: gray;
+  }
+
+  &__distributives {
+    display: flex;
+    gap: 40px;
+  }
+
+  &__follow {
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 36px;
+  }
+
+  .selected {
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 27px;
+    color: #7A66CC;
+  }
+
+  .app {
+    display: flex;
+    gap: 30px;
+
+    &__link {
+      display: flex;
+      gap: 10px;
+    }
+  }
+}
+
+
+
