--- a/src/scss/comonn.scss
+++ b/src/scss/comonn.scss
@@ -31,37 +31,60 @@
 }
 
 .video {
-    position: relative;
     display: flex;
     gap: 45px;
 
+    @media (max-width: 400px) {
+        gap: 10px 20px;
+        justify-content: center;
+    }
+
+    @media (max-width: 400px) {
+        flex-wrap: wrap;
+    }
+
+    &__play {
+        width: 25px;
+        height: 22px;
+    }
+
     &__line {
+        position: relative;
         width: 100%;
         height: 2px;
         background-color: white;
         align-self: center;
+        overflow: visible;
+        @media (max-width: 400px) {
+            width: 100%;
+           
+            order: -1;
+        }
+        &::after {
+            content: '';
+            position: absolute;
+            width: 70px;
+            height: 2px;
+            border: 2px solid #7A66CC;
+            left: 0;
+            top: 0;
+        }
+
+        &::before {
+            content: '';
+            position: absolute;
+            width: 3px;
+            height: 20px;
+            border: 2px solid #7A66CC;
+            left: 70px;
+            top: -8px;
+        }
+    
     }
 
-    &::after {
-        content: '';
-        position: absolute;
-        width: 70px;
-        height: 2px;
-        border: 2px solid #7A66CC;
-        left: 67px;
-        top: 12px;
-    }
+
       
-    &::before {
-        content: '';
-        position: absolute;
-        width: 3px;
-        height: 20px;
-        border: 2px solid #7A66CC;
-        left: 135px;
-        top: 3px;
-    }
-
+    
     &__time {
         color: white;
         white-space: nowrap;
