--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -5,6 +5,13 @@
     max-width: 100vw;
     height: 100vh;
     object-fit: cover;
+    @media (max-width: 700px) {
+      height: 60vh;
+    }
+
+    @media (max-width: 420px) {
+      height: 40vh;
+    }
   }
 
   &__inner {
@@ -17,6 +24,14 @@
     @media (max-width: 1140px) {
       max-width: calc(100% - 30px);
     }
+
+    @media (max-width: 700px) {
+      bottom: 50%;
+    }
+
+    @media (max-width: 420px) {
+      bottom: 70%;
+    }
   }
 
   &__subtitle {
@@ -24,6 +39,10 @@
     font-size: 48px;
     line-height: 72px;
     color: white;
+    @media (max-width: 420px) {
+      font-size: 36px;
+      line-height: 60px;
+    }
   }
 
   &__title {
@@ -32,6 +51,20 @@
     line-height: 150px;
     -webkit-text-stroke: 1px white;
     color: transparent;
+    @media (max-width: 700px) {
+      font-size: 80px;
+      line-height: 100px;
+    }
+
+    @media (max-width: 560px) {
+      font-size: 60px;
+      line-height: 80px;
+    }
+
+    @media (max-width: 420px) {
+      font-size: 40px;
+      line-height: 60px;
+    }
   }
 }
 
@@ -190,6 +223,9 @@
 //===== QUOTE BLOCK =====
 .quote  {
   padding-top: 230px;
+  @media (max-width: 1000px) {
+    padding-top: 100px;
+  }
   &__container {
     position: relative;
     color: white;
@@ -285,25 +321,7 @@
       right: 40px;
     }
     @media (max-width: 1000px) {
-      top: 320px;
-      left: 50%;
-      transform: translateX(-50%);
-    }
-    @media (max-width: 600px) {
-      top: 350px;
-    }
-    @media (max-width: 500px) {
-      top: 370px;
-    }
-    @media (max-width: 400px) {
-      top: 400px;
-    }
-    @media (max-width: 380px) {
-      top: 420px;
-      width: 90%;
-    }
-    @media (max-width: 350px) {
-      top: 450px;
+      display: none;
     }
   }
 }
@@ -311,21 +329,46 @@
 //=====TRACKS BLOCK=====
 .tracks {
   padding-top: 180px;
+  @media (max-width: 1000px) {
+    padding-top: 90px;
+  }
   //temp
   padding-bottom: 200px;
   //temp
   &__container {
     display: flex;
-    gap: 95px;
+    justify-content: space-between;
+    gap: 20px;
+    align-items: center;
+    @media (max-width: 1100px) {
+      flex-direction: column;
+      gap: 50px;
+    }
   }
 
   &__img {
+    width: 100%;
+    max-width: 450px;
     border: 17px solid #7A66CC;
     border-radius: 50%;
+    outline: 17px solid #7a66cc5a ;
+    
   }
 
   &__inner {
     color: white;
+    max-width: 540px;
+    width: 100%;
+    @media (max-width: 1100px) {
+      max-width: 80%;
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+    }
+
+    @media (max-width: 600px) {
+      max-width: 100%;
+    }
   }
 
   &__heading {
@@ -334,6 +377,13 @@
 
   &__video {
     margin-bottom: 50px;
+    @media (max-width: 1100px) {
+      width: 80%;
+    }
+
+    @media (max-width: 800px) {
+      width: 100%;
+    }
   }
 
   &__songs {
@@ -359,13 +409,23 @@
 
   &__distributives {
     display: flex;
-    gap: 40px;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 370px;
+    @media (max-width: 360px) {
+      flex-direction: column;
+      align-items: center;
+    }
   }
 
   &__follow {
     font-weight: 600;
     font-size: 24px;
     line-height: 36px;
+    @media (max-width: 360px) {
+      font-size: 18px;
+      line-height: 24px;
+    }
   }
 
   .selected {
@@ -379,9 +439,14 @@
     display: flex;
     gap: 30px;
 
+    @media (max-width: 400px) {
+      gap: 15px;
+    }
+
     &__link {
       display: flex;
       gap: 10px;
+      align-items: center;
     }
   }
 }
