--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -332,9 +332,6 @@
   @media (max-width: 1000px) {
     padding-top: 90px;
   }
-  //temp
-  padding-bottom: 200px;
-  //temp
   &__container {
     display: flex;
     justify-content: space-between;
@@ -451,5 +448,95 @@
   }
 }
 
+//===== GALLERY BLOCK =====
 
+.gallery {
+  padding-top: 180px;
+  @media (max-width: 1000px) {
+    padding-top: 90px;
+  }
+  //temp
+  padding-bottom: 200px;
+  //temp
+  &__inner {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    gap: 30px;
+  }
+
+  &__item:nth-of-type(1) {
+    grid-row: 1/ span 2;
+  }
+
+  &__item:nth-of-type(4) {
+    grid-column: 4;
+    grid-row: 1/ span 2;
+  }
+
+  &__item:nth-of-type(5) {
+    grid-column: 2 / 4;
+  }
+
+  &__item {
+    position: relative;
+    border-radius: 30px 0 30px 0;
+    overflow: hidden;
+  }
+
+  &__img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  @media (max-width: 1000px) {
+    &__inner {
+      grid-template-columns: auto auto ;
+
+    }
+    
+    &__item:nth-of-type(1) {
+      grid-column: 1;
+      grid-row: 1;
+    }
+
+    &__item:nth-of-type(2) {
+      grid-column: 1;
+      grid-row: 2;
+    }
+
+    &__item:nth-of-type(3) {
+      grid-column: 2;
+      grid-row: 2;
+    }
+  
+    &__item:nth-of-type(4) {
+      grid-column: 2;
+      grid-row: 1;
+    }
+  
+    &__item:nth-of-type(5) {
+      grid-column: 1/3;
+      grid-row: 3;
+    }
+  }
+
+  &__text {
+    position: absolute;
+    z-index: 2;
+    top: 50%;
+    left: 0;
+    color: #7A66CC;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 36px;
+    background-color: #1C1B21CC;
+    transition: 0.3s;
+    opacity: 0;
+  }
+
+  &__item:hover &__text {
+    opacity: 1;
+  }
+}
 
