--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -455,13 +455,14 @@
   @media (max-width: 1000px) {
     padding-top: 90px;
   }
-  //temp
-  padding-bottom: 200px;
-  //temp
+  
   &__inner {
     display: grid;
     grid-template-columns: auto auto auto auto;
     gap: 30px;
+    @media (max-width:500px) {
+      gap: 10px;
+    }
   }
 
   &__item:nth-of-type(1) {
@@ -481,6 +482,9 @@
     position: relative;
     border-radius: 30px 0 30px 0;
     overflow: hidden;
+    @media (max-width:500px) {
+      border-radius: initial;
+    }
   }
 
   &__img {
@@ -523,13 +527,23 @@
 
   &__text {
     position: absolute;
-    z-index: 2;
-    top: 50%;
+    top: 0;
     left: 0;
-    color: #7A66CC;
+    z-index: 2;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    padding: 0 10px;
+
     font-weight: 700;
     font-size: 24px;
     line-height: 36px;
+    text-align: center;
+    color: #7A66CC;
+
     background-color: #1C1B21CC;
     transition: 0.3s;
     opacity: 0;
