--- a/src/scss/comonn.scss
+++ b/src/scss/comonn.scss
@@ -93,3 +93,60 @@
         line-height: 27px;
     }
 }
+
+.ticket {
+    background-color: rgb(52, 48, 48);
+    border-radius: 30px 0 30px 0;
+    &__img {
+        border-radius: 30px 0 30px 0;
+    }
+
+    &__location {
+        padding: 30px 0 20px 35px;
+
+        font-size: 24px;
+        font-weight: 700;
+        line-height: 36px;
+        color: grey;
+    }
+
+    &__title {
+        padding: 0 0 30px 35px;
+
+        font-size: 18px;
+        font-weight: 500;
+        line-height: 27px;
+        color: white;
+    }
+
+    &__bottombar {
+        display: flex;
+        justify-content: space-between;
+        padding-left: 40px;
+    }
+
+    &__data {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        font-size: 16px;
+        font-weight: 700;
+        line-height: 24px;
+        text-align: center;
+        color: gray;
+    }
+
+    &__button { 
+        padding: 20px 60px 20px 50px; 
+
+        font-size: 16px;
+        font-weight: 700;
+        line-height: 24px;
+        text-transform: uppercase;
+        color: white;
+        
+        background-color: #7A66CC;
+        border-radius: 30px 0 30px 0;
+    }
+}
