--- a/src/scss/comonn.scss
+++ b/src/scss/comonn.scss
@@ -97,8 +97,12 @@
 .ticket {
     background-color: rgb(52, 48, 48);
     border-radius: 30px 0 30px 0;
+    @media (max-width: 1080px) {
+        width: 48%;
+    }
     &__img {
         border-radius: 30px 0 30px 0;
+        width: 100%;
     }
 
     &__location {
