--- a/src/scss/comonn.scss
+++ b/src/scss/comonn.scss
@@ -97,9 +97,19 @@
 .ticket {
     background-color: rgb(52, 48, 48);
     border-radius: 30px 0 30px 0;
-    @media (max-width: 1080px) {
-        width: 48%;
+
+    @media (max-width: 1100px) {
+        width: calc(50% - 10px);
     }
+
+    @media (max-width: 700px) {
+        width: 80%;
+    }
+
+    @media (max-width: 500px) {
+        width: 100%;
+    }
+
     &__img {
         border-radius: 30px 0 30px 0;
         width: 100%;
@@ -112,6 +122,10 @@
         font-weight: 700;
         line-height: 36px;
         color: grey;
+
+        @media (max-width: 500px) {
+            padding-left: 25px;
+        }
     }
 
     &__title {
@@ -121,12 +135,20 @@
         font-weight: 500;
         line-height: 27px;
         color: white;
+
+        @media (max-width: 500px) {
+            padding-left: 25px;
+        }
     }
 
     &__bottombar {
         display: flex;
         justify-content: space-between;
         padding-left: 40px;
+
+        @media (max-width: 500px) {
+            padding-left: 25px;
+        }
     }
 
     &__data {
