--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -569,9 +569,16 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    @media (max-width: 1080px) {
-      gap: 30px;
+    gap: 10px;
+
+    @media (max-width: 1100px) {
       justify-content: center;
+      gap: 20px;
+    }
+
+    @media (max-width: 700px) {
+      flex-direction: column;
+      align-items: center;
     }
   }
 }
