--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -1,12 +1,62 @@
-footer {
+.footer {
     padding-top: 180px;
-    //temp
-    padding-bottom: 200px;
-    //temp 
+    padding-bottom: 40px;
     &__inner {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
+    }
+
+    &__logo {
+        padding-bottom: 60px;
+    }
+
+    &__discription {
+        display: flex;
+        gap: 30px;
+    }
+
+    &__item {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    &__heading {
+        font-size: 18px;
+        font-weight: 600;
+        line-height: 27px;
+        text-align: right;
+        text-transform: uppercase;
+        color: white;
+    }
+
+    &__text {
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 27px;
+        color: white;
+    }
+
+    &__message {
+        display: flex;
+        gap: 30px;
+        padding-top: 60px;
+        padding-bottom: 100px;
+    }
+
+    &__img {
+        border: 10px solid #7A66CC;
+        outline: 8px solid #2C2C2C;
+        background-color: #7A66CC;
+        border-radius: 50%;
+    }
+
+    &__end-text{
+        font-size: 13px;
+        font-weight: 400;
+        line-height: 20px;
+        color: gray;
     }
 }
